tests/baselines/reference/symbolProperty11(strict=true).errors.txt
symbolProperty11.ts(3,27): error TS7008: Member 'x' implicitly has an 'any' type.


==== symbolProperty11.ts (1 errors) ====
    class C { }
    interface I {
        [Symbol.iterator]?: { x };
                              ~
!!! error TS7008: Member 'x' implicitly has an 'any' type.
    }
    
    var i: I;
    i = new C;
    var c: C = i;